--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "nuxt3-vuejs3-logger",
+	"name": "nuxt3-vue3-logger",
 	"service": "nuxt",
 	"dockerComposeFile": "docker-compose.yml",
 	"workspaceFolder": "/workspace",
