--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nuxt3-vuejs3-logger",
+  "name": "nuxt3-vue3-logger",
   "version": "1.0.0",
-  "description": "nuxt3-vuejs3-logger",
-  "repository": "https://github.com/PauloFerreira25/nuxt3-vuejs3-logger",
+  "description": "nuxt3-vue3-logger",
+  "repository": "https://github.com/PauloFerreira25/nuxt3-vue3-logger",
   "license": "MIT",
   "type": "module",
   "exports": {
@@ -28,8 +28,7 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.9.3",
-    "vuejs3-logger": "^1.0.0"
+    "@nuxt/kit": "^3.9.3"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
