--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   ],
   "scripts": {
     "prepack": "nuxt-module-build build",
+    "client:build": "nuxi generate client",
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
     "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "build": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt-module-build build && npm run client:build",
     "lint": "eslint .",
     "test": "vitest run",
     "test:watch": "vitest watch"
